--- a/window.html
+++ b/window.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <style type="text/css">
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+      hr {
+        margin: 0;
+      }
+      .timezone {
+        padding: 0 8px 8px;
+        margin: 0;
+      }      
+      .timezone.odd {
+        background: #eff2ff;
+      }
+      #content h1, #content h2, #content h3 {
+        margin: 0px;
+        padding: 6px 0;
+      }
+      #searchbox {
+        margin: 0;
+        border: none;
+        line-height: 2em;
+        padding: 8px;
+        width: 100%;
+      }
+      #searchbox:focus {
+        outline: none;
+      }
+      #content {
+        margin: 0;
+        padding: 0;    
+      }
+    </style>    
+    <link rel="stylesheet" href="jquery-ui.css">
+    <script src="jquery-1.10.2.js"></script>  
+    <script src="jquery-ui.js"></script>  
+    <script src="main.js"></script>  
   </head>
   <body>
-  	<h2>Find the time in:</h2>
-    <input type="text" placeholder="Enter a location">
-
-  	<hr/>
-    <div class="timezone">
-    	<h2>Mountain Time</h2>
-    	<div>2:24PM || (GMT - 6:00PM)</div>
-	</div>
+    <div>
+      <input id="searchbox" type="text" placeholder="Enter a location">
+      <hr/>
+    </div>
+    <section id="content">
+      <div class="timezone odd">
+        <h2>Pacific Time</h2>
+        <div>2:24PM || (GMT - 6:00PM)</div>
+      </div>
+      <div class="timezone">
+        <h2>Mountain Time</h2>
+        <div>2:24PM || (GMT - 6:00PM)</div>
+      </div>
+      <div class="timezone odd">
+        <h2>Central Time</h2>
+        <div>2:24PM || (GMT - 6:00PM)</div>
+      </div>
+      <div class="timezone">
+        <h2>Eastern Time</h2>
+        <div>2:24PM || (GMT - 6:00PM)</div>
+      </div>
+    </section>   
   </body>
 </html>
