--- a/window.html
+++ b/window.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <style type="text/css">
-      html, body {
+      html {
         margin: 0;
-        padding: 0;
+        padding: 0;        
+      }
+      body {
+        margin: 0;
+        padding: 0;  
+        overflow: hidden;
+        width: 100%;
+        height: 100%;      
       }
       hr {
         margin: 0;
@@ -13,6 +20,7 @@
       .timezone {
         padding: 0 8px 8px;
         margin: 0;
+        height: 60px;
       }      
       .timezone.odd {
         background: #eff2ff;
@@ -21,18 +29,25 @@
         margin: 0px;
         padding: 6px 0;
       }
+      #header {
+        overflow: hidden;
+        position: absolute;  
+        width: 100%;
+        height: 44px;
+      }
       #searchbox {
         margin: 0;
         border: none;
         line-height: 2em;
         padding: 8px;
-        width: 100%;
-      }
+        width: 100%;             
+      }      
       #searchbox:focus {
         outline: none;
       }
       #content {
-        margin: 0;
+        overflow: auto;
+        margin: 44px 0;
         padding: 0;    
       }
     </style>    
@@ -42,26 +57,26 @@
     <script src="main.js"></script>  
   </head>
   <body>
-    <div>
+    <header id="header">
       <input id="searchbox" type="text" placeholder="Enter a location">
       <hr/>
-    </div>
+    </header> 
     <section id="content">
       <div class="timezone odd">
         <h2>Pacific Time</h2>
-        <div>2:24PM || (GMT - 6:00PM)</div>
+        <div><span id="pst">0:00AM</span> || (GMT -7:00)</div>
       </div>
       <div class="timezone">
         <h2>Mountain Time</h2>
-        <div>2:24PM || (GMT - 6:00PM)</div>
+        <div><span id="mst">0:00AM</span> || (GMT -6:00)</div>
       </div>
       <div class="timezone odd">
         <h2>Central Time</h2>
-        <div>2:24PM || (GMT - 6:00PM)</div>
+        <div><span id="cst">0:00AM</span> || (GMT -5:00)</div>
       </div>
       <div class="timezone">
         <h2>Eastern Time</h2>
-        <div>2:24PM || (GMT - 6:00PM)</div>
+        <div><span id="est">0:00AM</span> || (GMT -4:00)</div>
       </div>
     </section>   
   </body>
